# rules_pg

./: BUILD.bazel  CLAUDE.md  DESIGN.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extensions.bzl  repositories.bzl
private/: BUILD.bazel  binary.bzl  launcher.py  schema.bzl  seed.bzl  server.bzl  test.bzl
tests/: BUILD.bazel  csv_seed_test.sh  pg_binary_test.sh  pg_health_check_test.sh  pg_server_test.sh  schema_smoke_test.sh  seed_smoke_test.sh
tests/schema/: 001_init.sql  002_tags.sql
tests/seed/: seed.sql  tags.csv
toolchain/: BUILD.bazel  toolchain.bzl
tools/: update_checksums.sh
