load("@rules_pg//:defs.bzl", "pg_test", "pg_seed_data", "postgres_schema")

# ---------------------------------------------------------------------------
# Schema
# ---------------------------------------------------------------------------

postgres_schema(
    name = "test_schema",
    srcs = [
        "schema/001_init.sql",
        "schema/002_tags.sql",
    ],
)

# ---------------------------------------------------------------------------
# Seed data
# ---------------------------------------------------------------------------

pg_seed_data(
    name = "test_seed",
    schema = ":test_schema",
    srcs = ["seed/seed.sql"],
)

# ---------------------------------------------------------------------------
# Tests: schema only (no seed)
# ---------------------------------------------------------------------------

pg_test(
    name = "schema_smoke_test",
    srcs = ["schema_smoke_test.sh"],
    schema = ":test_schema",
    size = "medium",
    tags = ["pg"],
)

# ---------------------------------------------------------------------------
# Tests: schema + seed
# ---------------------------------------------------------------------------

pg_test(
    name = "seed_smoke_test",
    srcs = ["seed_smoke_test.sh"],
    schema = ":test_schema",
    seed = ":test_seed",
    size = "medium",
    tags = ["pg"],
)

# ---------------------------------------------------------------------------
# Tests: explicit PG versions (14, 15, 16)
# ---------------------------------------------------------------------------

pg_test(
    name = "pg14_smoke_test",
    srcs = ["schema_smoke_test.sh"],
    schema = ":test_schema",
    postgres_version = "14",
    size = "medium",
    tags = ["pg"],
)

pg_test(
    name = "pg15_smoke_test",
    srcs = ["schema_smoke_test.sh"],
    schema = ":test_schema",
    postgres_version = "15",
    size = "medium",
    tags = ["pg"],
)

pg_test(
    name = "pg16_smoke_test",
    srcs = ["schema_smoke_test.sh"],
    schema = ":test_schema",
    postgres_version = "16",
    size = "medium",
    tags = ["pg"],
)

# ---------------------------------------------------------------------------
# Tests: verify PostgreSQL binary is installed and functional
# ---------------------------------------------------------------------------

pg_test(
    name = "pg_binary_test",
    srcs = ["pg_binary_test.sh"],
    schema = ":test_schema",
    size = "medium",
    tags = ["pg"],
)

# ---------------------------------------------------------------------------
# Seed data: CSV-based loading
# ---------------------------------------------------------------------------

pg_seed_data(
    name = "csv_seed",
    schema = ":test_schema",
    srcs = ["seed/tags.csv"],
)

# ---------------------------------------------------------------------------
# Tests: CSV seed loading
# ---------------------------------------------------------------------------

pg_test(
    name = "csv_seed_test",
    srcs = ["csv_seed_test.sh"],
    schema = ":test_schema",
    seed = ":csv_seed",
    size = "medium",
    tags = ["pg"],
)

# ---------------------------------------------------------------------------
# Tests: custom database name + credentials
# ---------------------------------------------------------------------------

pg_test(
    name = "custom_db_test",
    srcs = ["seed_smoke_test.sh"],
    schema = ":test_schema",
    seed = ":test_seed",
    database = "myapp_test",
    pg_user = "myapp",
    pg_password = "secret",
    size = "medium",
    tags = ["pg"],
)
