load("@rules_pg//:defs.bzl", "pg_health_check", "pg_seed_data", "pg_server", "pg_test", "postgres_schema")

# ---------------------------------------------------------------------------
# Schema
# ---------------------------------------------------------------------------

postgres_schema(
    name = "test_schema",
    srcs = [
        "schema/001_init.sql",
        "schema/002_tags.sql",
    ],
)

# ---------------------------------------------------------------------------
# Seed data
# ---------------------------------------------------------------------------

pg_seed_data(
    name = "test_seed",
    schema = ":test_schema",
    srcs = ["seed/seed.sql"],
)

# ---------------------------------------------------------------------------
# Tests: schema only (no seed)
# ---------------------------------------------------------------------------

pg_test(
    name = "schema_smoke_test",
    srcs = ["schema_smoke_test.sh"],
    schema = ":test_schema",
    size = "medium",
    tags = ["pg"],
)

# ---------------------------------------------------------------------------
# Tests: schema + seed
# ---------------------------------------------------------------------------

pg_test(
    name = "seed_smoke_test",
    srcs = ["seed_smoke_test.sh"],
    schema = ":test_schema",
    seed = ":test_seed",
    size = "medium",
    tags = ["pg"],
)

# ---------------------------------------------------------------------------
# Tests: explicit PG versions (14, 15, 16)
# ---------------------------------------------------------------------------

pg_test(
    name = "pg14_smoke_test",
    srcs = ["schema_smoke_test.sh"],
    schema = ":test_schema",
    postgres_version = "14",
    size = "medium",
    tags = ["pg"],
)

pg_test(
    name = "pg15_smoke_test",
    srcs = ["schema_smoke_test.sh"],
    schema = ":test_schema",
    postgres_version = "15",
    size = "medium",
    tags = ["pg"],
)

pg_test(
    name = "pg16_smoke_test",
    srcs = ["schema_smoke_test.sh"],
    schema = ":test_schema",
    postgres_version = "16",
    size = "medium",
    tags = ["pg"],
)

# ---------------------------------------------------------------------------
# Tests: verify PostgreSQL binary is installed and functional
# ---------------------------------------------------------------------------

pg_test(
    name = "pg_binary_test",
    srcs = ["pg_binary_test.sh"],
    schema = ":test_schema",
    size = "medium",
    tags = ["pg"],
)

# ---------------------------------------------------------------------------
# Seed data: CSV-based loading
# ---------------------------------------------------------------------------

pg_seed_data(
    name = "csv_seed",
    schema = ":test_schema",
    srcs = ["seed/tags.csv"],
)

# ---------------------------------------------------------------------------
# Tests: CSV seed loading
# ---------------------------------------------------------------------------

pg_test(
    name = "csv_seed_test",
    srcs = ["csv_seed_test.sh"],
    schema = ":test_schema",
    seed = ":csv_seed",
    size = "medium",
    tags = ["pg"],
)

# ---------------------------------------------------------------------------
# Tests: custom database name + credentials
# ---------------------------------------------------------------------------

pg_test(
    name = "custom_db_test",
    srcs = ["seed_smoke_test.sh"],
    schema = ":test_schema",
    seed = ":test_seed",
    database = "myapp_test",
    pg_user = "myapp",
    pg_password = "secret",
    size = "medium",
    tags = ["pg"],
)

# ---------------------------------------------------------------------------
# pg_server + pg_health_check fixtures used by the server-mode tests below
# ---------------------------------------------------------------------------

pg_server(
    name = "pg_server_test_svc",
    schema = ":test_schema",
    seed = ":test_seed",
)

pg_health_check(
    name = "pg_server_test_health",
    server = ":pg_server_test_svc",
)

# ---------------------------------------------------------------------------
# Tests: pg_server lifecycle
#   - starts cluster, writes env file, schema + seed applied, SIGTERM clean exit
# ---------------------------------------------------------------------------

sh_test(
    name = "pg_server_test",
    srcs = ["pg_server_test.sh"],
    args = ["$(rootpath :pg_server_test_svc)"],
    data = [":pg_server_test_svc"],
    size = "medium",
    tags = ["pg"],
)

# ---------------------------------------------------------------------------
# Tests: pg_health_check script
#   - exits non-zero without env file, exits 0 with it
#   Does not start a real server; manipulates the env file directly.
# ---------------------------------------------------------------------------

sh_test(
    name = "pg_health_check_test",
    srcs = ["pg_health_check_test.sh"],
    args = ["$(rootpath :pg_server_test_health)"],
    data = [":pg_server_test_health"],
    size = "small",
    tags = ["pg"],
)
